2001-11-07  Ezra Peisach  <epeisach@mit.edu>

	* gss-misc.c (recv_token): Do not attempt to malloc 0 bytes.

2001-11-01  Sam Hartman  <hartmans@mit.edu>

	* gss-server.c  gss-client.c:  Only free buffers returned from
	GSSAPI using  gss_release_buffer

	* gss-client.c (client_establish_context): Trailing null should
	not be part of service name 

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* gss-misc.c, gss-misc.h: Make prototypes unconditional.

2001-09-01  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (SRCS): Use srcdir.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* gss-client.c (parse_oid): Cast argument to isdigit() to int.

	* gss-server.c (sign_server): Cast argument to isspace() to int.

2001-05-15  Danilo Almeida  <dalmeida@mit.edu>

	* gss-server.c (usage): Fix usage info *again* to reflect that
	service_name is required.

Tue Sep 26 18:13:54 2000  Ezra Peisach  <epeisach@mit.edu>

	* gss-misc.c: Include <sys/socket.h> for prototype definitions. 

	* gss-client.c gss-server.c: Warning cleanups.

2000-02-11  Tom Yu  <tlyu@mit.edu>

	* README, gss-client.c, gss-misc.c, gss-misc.h, gss-server.c:
	Patches from jik to make gss-sample more versatile.

2000-01-31  Danilo Almeida  <dalmeida@mit.edu>

	* gss-client.c, gss-server.c, gss-misc.c: Include Windows headers
	instead of Unix headers under Windows.

	* gss-server.c (usage): Fix usage info to reflect that service_name is
	required.

	* gss-misc.c (read_all, write_all): Change write to send and read
	to recv for portability.
	(gettimeofday): Add an implementation of gettimeofday() for
	Windows.

	* Makefile.in: Build under Windows.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

Mon Dec 21 22:04:02 1998  Theodore Y. Ts'o  <tytso@mit.edu>
